# CMake-Example

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  main.cpp  run.bat  run.sh
Linux/: .gitignore  .gitmodules  CMakeLists.txt  Makefile  ReadMe.md  glfw_headers.txt  main.cpp  run.sh  setupEnvironment.sh
Linux/src/: CMakeLists.txt  adder.cpp  adder.h
Linux/src/debuggerContent/: TerminalManager.cpp  TerminalManager.h
src/: CMakeLists.txt  adder.cpp  main.cpp
src/debuggerContent/: CMakeLists.txt  TerminalManager.cpp  TerminalManager.h
vs/: CMakeLists.txt
vs/proj/CMakeExample/: CMakeLists.txt
vs/proj/CMakeExample/CMakeExample/: CMakeExample.cpp  CMakeExample.h  CMakeLists.txt
